--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>com.lanrenspace</groupId>
     <artifactId>edu-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>edu-service-common</module>
+        <module>edu-service-resume</module>
+        <module>edu-service-autodeliver</module>
+    </modules>
     <name>edu-parent</name>
     <packaging>pom</packaging>
     <url>http://www.example.com</url>
@@ -46,11 +51,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
