Eureka+Ribbon+Hystrix

--- a/edu-cloud-hystrix-dashboard/pom.xml
+++ b/edu-cloud-hystrix-dashboard/pom.xml
@@ -9,8 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>edu-service-resume</artifactId>
-    <name>edu-service-resume</name>
+    <artifactId>edu-cloud-hystrix-dashboard</artifactId>
+
+    <name>edu-cloud-hystrix-dashboard</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -22,20 +23,16 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.lanrenspace</groupId>
-            <artifactId>edu-service-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
-
-        <!--eureka client客户端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
     </dependencies>
 
