--- a/edu-service-resume/src/main/resources/application-8081.yml
+++ b/edu-service-resume/src/main/resources/application-8081.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   application:
     name: lanrenspace.edu.service.resume
@@ -17,6 +17,7 @@ edu:
 eureka:
   client:
     service-url:
-      defaultZone: http://${edu.eureka}:8761/eureka,http://${edu.eureka}:8762/eureka,http://${edu.eureka}:8763/eureka
+      #defaultZone: http://${edu.eureka}:8761/eureka,http://${edu.eureka}:8762/eureka,http://${edu.eureka}:8763/eureka
+      defaultZone: http://${edu.eureka}:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${server.port}
