--- a/edu-service-autodeliver/pom.xml
+++ b/edu-service-autodeliver/pom.xml
@@ -25,6 +25,17 @@
             <artifactId>edu-service-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!--eureka client客户端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
