--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
         <module>edu-service-common</module>
         <module>edu-service-resume</module>
         <module>edu-service-autodeliver</module>
+        <module>edu-cloud-eureka-server</module>
+        <module>edu-cloud-hystrix-dashboard</module>
+        <module>edu-cloud-hystrix-turbine</module>
     </modules>
     <name>edu-parent</name>
     <packaging>pom</packaging>
@@ -51,6 +54,39 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--eureka server 需要引入Jaxb，开始-->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.2.10-b140310.1920</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <!--引入Jaxb，结束-->
+
+        <!--spring cloud commons模块-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
         </dependency>
     </dependencies>
 
