--- a/edu-cloud-gateway/pom.xml
+++ b/edu-cloud-gateway/pom.xml
@@ -8,10 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>edu-cloud-hystrix-turbine</artifactId>
-
-    <name>edu-cloud-hystrix-turbine</name>
+    <artifactId>edu-cloud-gateway</artifactId>
+    <name>edu-cloud-gateway</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -24,19 +22,19 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>com.lanrenspace</groupId>
-            <artifactId>edu-service-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+            <exclusions></exclusions>
+        </dependency>
+
     </dependencies>
+
 
 </project>
