--- a/edu-cloud-eureka-server/src/main/resources/application.yml
+++ b/edu-cloud-eureka-server/src/main/resources/application.yml
@@ -1,18 +1,59 @@
-server:
-  port: 8761
 spring:
   application:
     name: lanrenspace.edu.eureka.server
-
+---
+server:
+  port: 8761
 eureka:
   # 当前eureka实例主机名
   instance:
-    hostname: localhost
+    hostname: LanrenspaceEduEurekaServerNodeA
   # eureka 客户端配置信息,和server交互
   client:
     service-url: #配置客户端所交互的Eureka Server地址
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
+      # 集群模式下，应该指向其他EurekaServer
+      defaultZone: http://LanrenspaceEduEurekaServerNodeB:8762/eureka,http://LanrenspaceEduEurekaServerNodeC:8763/eureka
     # 是否需要注册
-    register-with-eureka: false
+    register-with-eureka: true
     # 是否获取注册中心的服务信息
-    fetch-registry: false
+    fetch-registry: true
+spring:
+  profiles: NODE_8761
+
+---
+server:
+  port: 8762
+eureka:
+  # 当前eureka实例主机名
+  instance:
+    hostname: LanrenspaceEduEurekaServerNodeB
+  # eureka 客户端配置信息,和server交互
+  client:
+    service-url: #配置客户端所交互的Eureka Server地址
+      # 集群模式下，应该指向其他EurekaServer
+      defaultZone: http://LanrenspaceEduEurekaServerNodeA:8761/eureka,http://LanrenspaceEduEurekaServerNodeC:8763/eureka
+    # 是否需要注册
+    register-with-eureka: true
+    # 是否获取注册中心的服务信息
+    fetch-registry: true
+spring:
+  profiles: NODE_8762
+
+---
+server:
+  port: 8763
+eureka:
+  # 当前eureka实例主机名
+  instance:
+    hostname: LanrenspaceEduEurekaServerNodeC
+  # eureka 客户端配置信息,和server交互
+  client:
+    service-url: #配置客户端所交互的Eureka Server地址
+      # 集群模式下，应该指向其他EurekaServer
+      defaultZone: http://LanrenspaceEduEurekaServerNodeA:8761/eureka,http://LanrenspaceEduEurekaServerNodeB:8762/eureka
+    # 是否需要注册
+    register-with-eureka: true
+    # 是否获取注册中心的服务信息
+    fetch-registry: true
+spring:
+  profiles: NODE_8763
