--- a/edu-service-resume/src/main/resources/application.yml
+++ b/edu-service-resume/src/main/resources/application.yml
@@ -1,22 +1,11 @@
+---
 server:
   port: 8080
 spring:
-  application:
-    name: lanrenspace.edu.service.resume
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://175.24.45.125:3306/lanrenspace_edu?useUnicode=true&characterEncoding=utf8
-    username: admin
-    password: 123456
-    jpa:
-      database: MySQL
-      show-sql: true
-#注册到Eureka服务中心
-edu:
-  eureka: 175.24.45.125
-eureka:
-  client:
-    service-url:
-      defaultZone: http://${edu.eureka}:8761/eureka,http://${edu.eureka}:8762/eureka,http://${edu.eureka}:8763/eureka
-  instance:
-    instance-id: ${spring.application.name}:${server.port}
+  profiles: NODE_8080
+
+---
+server:
+  port: 8081
+spring:
+  profiles: NODE_8081
